# Generated by Django 5.2.10 on 2026-01-21 01:54

import django.db.models.deletion
import modelcluster.fields
import wagtail.fields
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('images', '0001_initial'),
        ('wagtailcore', '0098_delete_embed'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='HackathonPage',
            fields=[
                ('page_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='wagtailcore.page')),
                ('description', wagtail.fields.RichTextField(blank=True, help_text='Brief description of the hackathon')),
                ('min_team_size', models.PositiveIntegerField(default=2, help_text='Minimum number of team members')),
                ('max_team_size', models.PositiveIntegerField(default=5, help_text='Maximum number of team members')),
                ('allow_solo', models.BooleanField(default=False, help_text='Allow individual participants without teams')),
                ('required_roles', models.JSONField(blank=True, default=list, help_text="List of required roles for team composition (e.g., ['hacker', 'hustler'])")),
                ('passing_score', models.DecimalField(decimal_places=2, default=80.0, help_text='Minimum score required for quest completion', max_digits=5)),
                ('status', models.CharField(choices=[('draft', 'Draft'), ('upcoming', 'Upcoming'), ('registration_open', 'Registration Open'), ('in_progress', 'In Progress'), ('judging', 'Judging'), ('completed', 'Completed'), ('archived', 'Archived')], default='draft', max_length=20)),
                ('body', wagtail.fields.StreamField([('heading', 0), ('paragraph', 1)], blank=True, block_lookup={0: ('wagtail.blocks.CharBlock', (), {'form_classname': 'title'}), 1: ('wagtail.blocks.RichTextBlock', (), {})})),
                ('cover_image', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to='images.customimage')),
            ],
            options={
                'verbose_name': 'Hackathon',
                'verbose_name_plural': 'Hackathons',
            },
            bases=('wagtailcore.page',),
        ),
        migrations.CreateModel(
            name='Phase',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(help_text="Display name for phase (e.g., 'Team Formation', 'Hacking Period')", max_length=200)),
                ('description', models.TextField(blank=True, help_text='Phase description and objectives')),
                ('start_date', models.DateTimeField(help_text='Phase start datetime (UTC)')),
                ('end_date', models.DateTimeField(help_text='Phase end datetime (UTC)')),
                ('order', models.PositiveIntegerField(default=0, help_text='Display order (lower numbers first)')),
                ('requirements', models.JSONField(blank=True, default=dict, help_text='Optional phase-specific requirements as JSON')),
                ('hackathon', modelcluster.fields.ParentalKey(on_delete=django.db.models.deletion.CASCADE, related_name='phases', to='hackathons.hackathonpage')),
            ],
            options={
                'ordering': ['order', 'start_date'],
            },
        ),
        migrations.CreateModel(
            name='Prize',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(help_text="Prize name (e.g., 'First Place', 'Best AI Solution')", max_length=200)),
                ('description', models.TextField(blank=True, help_text='Prize details and benefits')),
                ('rank', models.PositiveIntegerField(default=1, help_text='Ranking (1 = first place, 2 = second place, etc.)')),
                ('monetary_value', models.DecimalField(blank=True, decimal_places=2, help_text='Cash value in USD', max_digits=10, null=True)),
                ('benefits', models.JSONField(blank=True, default=list, help_text="Non-monetary benefits as JSON array (e.g., ['Incubation access', 'Mentorship'])")),
                ('hackathon', modelcluster.fields.ParentalKey(on_delete=django.db.models.deletion.CASCADE, related_name='prizes', to='hackathons.hackathonpage')),
            ],
            options={
                'ordering': ['rank'],
            },
        ),
        migrations.CreateModel(
            name='Quest',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(help_text='Quest name', max_length=200)),
                ('slug', models.SlugField(help_text='URL-friendly identifier', max_length=200, unique=True)),
                ('description', wagtail.fields.RichTextField(help_text='Challenge description and objectives')),
                ('quest_type', models.CharField(choices=[('technical', 'Technical (Hacker)'), ('commercial', 'Commercial (Hustler)'), ('operational', 'Operational (Hipster)'), ('mixed', 'Mixed')], default='technical', max_length=20)),
                ('difficulty', models.CharField(choices=[('beginner', 'Beginner'), ('intermediate', 'Intermediate'), ('advanced', 'Advanced'), ('expert', 'Expert')], default='intermediate', max_length=20)),
                ('xp_reward', models.PositiveIntegerField(default=100, help_text='XP awarded upon completion')),
                ('estimated_time_minutes', models.PositiveIntegerField(default=60, help_text='Estimated completion time')),
                ('is_active', models.BooleanField(default=True, help_text='Quest is available for attempts')),
                ('tags', models.JSONField(blank=True, default=list, help_text="Skill tags (e.g., ['python', 'machine-learning', 'api'])")),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('hackathon', models.ForeignKey(blank=True, help_text='If set, quest is specific to this hackathon', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='quests', to='hackathons.hackathonpage')),
            ],
            options={
                'verbose_name': 'Quest',
                'verbose_name_plural': 'Quests',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Team',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(help_text='Team name', max_length=200)),
                ('slug', models.SlugField(help_text='URL-friendly team identifier', max_length=200)),
                ('tagline', models.CharField(blank=True, help_text='Short team description', max_length=500)),
                ('final_score', models.DecimalField(decimal_places=2, default=0.0, help_text='Aggregated score from verification', max_digits=6)),
                ('technical_score', models.DecimalField(decimal_places=2, default=0.0, max_digits=6)),
                ('commercial_score', models.DecimalField(decimal_places=2, default=0.0, max_digits=6)),
                ('operational_score', models.DecimalField(decimal_places=2, default=0.0, max_digits=6)),
                ('status', models.CharField(choices=[('forming', 'Forming'), ('ready', 'Ready'), ('submitted', 'Submitted'), ('verified', 'Verified'), ('disqualified', 'Disqualified')], default='forming', max_length=20)),
                ('is_seeking_members', models.BooleanField(default=True, help_text='Show in team formation page')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('hackathon', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='teams', to='hackathons.hackathonpage')),
            ],
            options={
                'ordering': ['-final_score', 'name'],
            },
        ),
        migrations.CreateModel(
            name='TeamMember',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('role', models.CharField(choices=[('hacker', 'Hacker (Engineer)'), ('hipster', 'Hipster (Designer/UX)'), ('hustler', 'Hustler (Business/Marketing)'), ('mentor', 'Mentor')], help_text='Team role', max_length=50)),
                ('is_leader', models.BooleanField(default=False, help_text='Team captain/leader')),
                ('joined_at', models.DateTimeField(auto_now_add=True)),
                ('team', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='membership', to='hackathons.team')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='team_memberships', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-is_leader', 'joined_at'],
                'unique_together': {('team', 'user')},
            },
        ),
        migrations.AddField(
            model_name='team',
            name='members',
            field=models.ManyToManyField(related_name='hackathon_teams', through='hackathons.TeamMember', to=settings.AUTH_USER_MODEL),
        ),
        migrations.CreateModel(
            name='Submission',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('submission_file', models.FileField(blank=True, help_text='Upload submission file (code, document, etc.)', null=True, upload_to='submissions/%Y/%m/')),
                ('submission_url', models.URLField(blank=True, help_text='Public repository or demo URL (optional)', max_length=500)),
                ('description', models.TextField(blank=True, help_text='Submission description and notes')),
                ('verification_status', models.CharField(choices=[('pending', 'Pending Review'), ('verified', 'Verified'), ('rejected', 'Rejected')], default='pending', max_length=20)),
                ('score', models.DecimalField(blank=True, decimal_places=2, help_text='Score (0-100) entered by reviewer', max_digits=6, null=True)),
                ('feedback', models.TextField(blank=True, help_text='Reviewer feedback and comments')),
                ('submitted_at', models.DateTimeField(auto_now_add=True)),
                ('verified_at', models.DateTimeField(blank=True, help_text='When verification was completed', null=True)),
                ('attempt_number', models.PositiveIntegerField(default=1, help_text='Submission attempt count')),
                ('hackathon', models.ForeignKey(blank=True, help_text='Hackathon final submission', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='final_submissions', to='hackathons.hackathonpage')),
                ('quest', models.ForeignKey(blank=True, help_text='Quest being attempted', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='submissions', to='hackathons.quest')),
                ('user', models.ForeignKey(blank=True, help_text='Individual submitter (for quests)', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='submissions', to=settings.AUTH_USER_MODEL)),
                ('verified_by', models.ForeignKey(blank=True, help_text='Staff member who verified', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='verified_submissions', to=settings.AUTH_USER_MODEL)),
                ('team', models.ForeignKey(blank=True, help_text='Team submitter (for hackathon finals)', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='submissions', to='hackathons.team')),
            ],
            options={
                'ordering': ['-submitted_at'],
                'indexes': [models.Index(fields=['verification_status'], name='hackathons__verific_c3176f_idx'), models.Index(fields=['user', '-submitted_at'], name='hackathons__user_id_a4793c_idx'), models.Index(fields=['team', '-submitted_at'], name='hackathons__team_id_79ad2e_idx')],
            },
        ),
        migrations.AlterUniqueTogether(
            name='team',
            unique_together={('hackathon', 'slug')},
        ),
    ]
